--- a/app/views/admin/jobs/new.html.erb
+++ b/app/views/admin/jobs/new.html.erb
@@ -2,12 +2,15 @@
 
 <%= simple_form_for [:admin,@job] do |f| %>
 
-<%= f.input :title %>
-<%= f.input :description %>
+<%= f.input :title, :label => "职位" %>
+<%= f.input :description, :label => "内容" %>
 <%= f.input :wage_lower_bound, :label => "薪资下限" %>
 <%= f.input :wage_upper_bound, :label => "薪资上限" %>
-<%= f.input :contact_email %>
-<%= f.input :is_hidden %>
+<%= f.input :source, :label => "来源" %>
+<%= f.input :place, :label => "城市" %>
+<%= f.input :scale, :label => "公司规模" %>
+<%= f.input :contact_email, :label => "联系方式" %>
+<%= f.input :is_hidden, :label => "隐藏" %>
 
   <%= f.submit "Submit" %>
 <% end %>
