--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -7,24 +7,15 @@
 <table class="table table-bordered table-striped custab">
   <thead>
     <tr>
-      <td>
-        职缺
-      </td>
-      <td>
-        收到履历数量
-      </td>
-      <td>
-        薪资下限
-      </td>
-      <td>
-        薪资上限
-      </td>
-      <td>
-        管理选项
-      </td>
-      <td>
-        刊登时间
-      </td>
+      <td>职缺</td>
+      <td>收到履历数量</td>
+      <td>薪资下限</td>
+      <td>薪资上限</td>
+      <td>工作来源</td>
+      <td>城市</td>
+      <td>公司规模</td>
+      <td>管理选项</td>
+      <td>刊登时间</td>
     </tr>
   </thead>
   <% @jobs.each do |job| %>
@@ -36,6 +27,9 @@
     <td> <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %> </td>
     <td> <%= job.wage_lower_bound %></td>
     <td> <%= job.wage_upper_bound %></td>
+    <td> <%= job.source %></td>
+    <td> <%= job.place %></td>
+    <td> <%= job.scale %></td>
     <td>
       <%= link_to("Edit", edit_admin_job_path(job), :class => "btn btn-xs btn-info") %>
       <%= link_to("Destroy", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
