--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,6 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">我的求职之路</a>
+          <a class="navbar-brand" href="/jobs">职缺</a>
         </div>
 
         <div class="collapse navbar-collapse">
