--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -9,8 +9,7 @@
     <tr>
       <td>职缺</td>
       <td>收到履历数量</td>
-      <td>薪资下限</td>
-      <td>薪资上限</td>
+      <td>薪资</td>
       <td>工作来源</td>
       <td>城市</td>
       <td>公司规模</td>
@@ -25,8 +24,7 @@
       <%= link_to(job.title, admin_job_path(job)) %>
     </td>
     <td> <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %> </td>
-    <td> <%= job.wage_lower_bound %></td>
-    <td> <%= job.wage_upper_bound %></td>
+    <td> <%= job.wage_lower_bound %> ~ <%= job.wage_upper_bound %></td>
     <td> <%= job.source %></td>
     <td> <%= job.place %></td>
     <td> <%= job.scale %></td>
