--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -20,8 +20,7 @@
   <thead>
     <tr>
       <td>职缺</td>
-      <td>薪资下限</d>
-      <td>薪资上限</td>
+      <td>薪资</d>
       <td>工作来源</td>
       <td>城市</td>
       <td>公司规模</td>
@@ -34,10 +33,7 @@
       <%= link_to(job.title, job_path(job)) %>
     </td>
     <td>
-      <%= job.wage_lower_bound %>
-    </td>
-    <td>
-      <%= job.wage_upper_bound %>
+      <%= job.wage_lower_bound %> ~ <%= job.wage_upper_bound %>
     </td>
     <td>
       <%= job.source %>
