--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,8 +1,11 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">我的求职之路</a>
+          <a class="navbar-brand" href="/">人至践，则无敌</a>
           <a class="navbar-brand" href="/jobs">职缺</a>
+          <a class="navbar-brand" href="/resumes">简历</a>
+          <a class="navbar-brand" href="/">成长</a>
+          <a class="navbar-brand" href="/">大事</a>
         </div>
 
         <div class="collapse navbar-collapse">
