--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -1,5 +1,5 @@
 <h1>我的简历</h1>
 
 <div class="text-center">
-  <%= link_to("修改简历", "#", :style => "font-size: 30px; text-decoration: underline;") %>
+  <%= link_to("修改简历", new_resume_path, :style => "font-size: 30px; text-decoration: underline;") %>
 </div>
