--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -5,7 +5,7 @@
           <a class="navbar-brand" href="/jobs">职缺</a>
           <a class="navbar-brand" href="/resumes">简历</a>
           <a class="navbar-brand" href="/">成长</a>
-          <a class="navbar-brand" href="/">大事</a>
+          <a class="navbar-brand" href="/events">大事</a>
         </div>
 
         <div class="collapse navbar-collapse">
