--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,7 +1,12 @@
 <h1>新建简历</h1>
 
 <%= simple_form_for @resume do |f| %>
+  <%= f.input :one_word %>
   <%= f.input :content %>
+  <%= f.input :experience %>
+  <%= f.input :why %>
+  <%= f.input :prove %>
+  <%= f.input :action %>
   <%= f.input :attachment %>
 
   <%= f.submit "送出" %>
