--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -1,11 +1,15 @@
-
+<div class="container">
+<div class="row">
+  <br>
 <h1>我的简历</h1>
 
 <div class="pull-right">
   <%= link_to("新建简历", new_resume_path, :style => "font-size: 20px;") %>
 </div>
 
-
+<br>
 <hr>
 
 <%= render :partial => "resume", :collection => @resumes, :as => :resume %>
+</div>
+</div>
