--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+  <div class="row">
 <div class="dropdown clearfix pull-right">
     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
       排序
@@ -16,37 +18,6 @@
     </ul>
 </div>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <td>职缺</td>
-      <td>薪资</d>
-      <td>工作来源</td>
-      <td>城市</td>
-      <td>公司规模</td>
-      <td>刊登时间</td>
-    </tr>
-  </thead>
-  <% @jobs.each do |job| %>
-  <tr>
-    <td>
-      <%= link_to(job.title, job_path(job)) %>
-    </td>
-    <td>
-      <%= job.wage_lower_bound %> ~ <%= job.wage_upper_bound %>
-    </td>
-    <td>
-      <%= job.source %>
-    </td>
-    <td>
-      <%= job.place %>
-    </td>
-    <td>
-      <%= job.scale %>
-    </td>
-    <td>
-      <%= job.created_at %>
-    </td>
-  </tr>
-  <% end %>
-</table>
+<%= render :partial => "job", :collection => @jobs, :as => :job %>
+</div>
+</div>
