--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,10 @@
  @import "bootstrap";
  @import "font-awesome";
 
+
+body {
+  background-color: #e7e5d9;
+}
  .first-page {
    background-image:url('https://ws4.sinaimg.cn/large/006tNc79gy1fhyig8c9pij31kw0w07wi.jpg');
    background-repeat: no-repeat;
@@ -57,12 +61,15 @@
   transition: 0.5s;
 }
 
+
+
+/******************************navbar*********************/
+
  .navbar-default {
-     background-color: #212121;  //背景颜色
-     border-color: #212121; //边框色
+     background-color: #1C1E20;  //背景颜色
+     border-color: #1C1E20; //边框色
      margin-bottom: 0; //底部 margin 不撑开距离
  }
-
 
   @media (min-width: 768px) {
     .navbar {
@@ -70,62 +77,28 @@
     }
   }
 
-   .navbar-default .navbar-brand {
-   color: #EF6C00; //字体颜色
+.navbar-brand > a,
+.navbar-default .navbar-nav > li > a {
+    color: #e7e5d9; //字体颜色
+    padding: 10px 15px; //上下10px，左右15px
+}
 
-   padding: 10px 15px; //上下10px，左右15px
-   line-height: 30px; //文字行高
+ .navbar-default .navbar-brand > a:hover,
+ .navbar-default .navbar-brand > a:focus,
+ .navbar-default .navbar-nav > li > a:hover,
+ .navbar-default .navbar-nav > li > a:focus {
+   color: #1C1E20;
+   background-color: rgba(231, 229, 217, 0.7); //鼠标放置在链接上的背景颜色，这里设为透明
+   text-decoration: none;
  }
-
- .navbar-default .navbar-brand:hover,
- .navbar-default .navbar-brand:focus {
-   color: #FF6F00; //鼠标放置在链接上的文字颜色
-
-   background-color: transparent; //鼠标放置在链接上的背景颜色，这里设为透明
- }
-
-  .navbar-default .navbar-nav > li > a{
-    color: #EF6C00;
-
-  }
-
-  .navbar-default .navbar-nav > li > a:hover,
-  .navbar-default .navbar-nav > li > a:focus {
-    color: #FF6F00;
-
-    background-color: transparent;
-  }
-  .navbar-default .navbar-nav > .active > a,
-  .navbar-default .navbar-nav > .active > a:hover,
-  .navbar-default .navbar-nav > .active > a:focus {
-    color: #FF6F00;
-
-    background-color: #FFE0B2;
-
-  }
 
   .navbar-default .navbar-nav > .open > a,
   .navbar-default .navbar-nav > .open > a:focus,
   .navbar-default .navbar-nav > .open > a:hover {
-    background-color: #FFE0B2;
-
+   background-color: rgba(231, 229, 217, 0.92); //鼠标放置在链接上的背景颜色，这里设为透明
     color: #212121;
-
   }
-
-   .navbar-brand > img {
-     display: inline-block; //图片和链接文字显示在同一行
-     margin-right: 10px; //图片和链接文字拉开一点距离
-     width: 32px; //定制图片宽度
-     height: 32px; //定制图片高度
- }
-
-  .container-fluid .jumbotron{
-    padding-bottom: 110px;//内部的底部边距，这样按钮不会很靠近底部了
-    margin: 0 -15px 20px;//顶部margin为0，因此可以直接接着导航栏；左右margin为负15，因此可以顶到浏览器的边缘（抵消 container-fluid 的 15px 左右padding);底部margin为20，会跟下面的内容撑开距离
-    border-radius: 0;//圆角为0
-  }
-
+  
    .btn-danger {
        color: #fff;//字体颜色
        background-color: #EF6C00;//背景颜色
