--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,17 +23,16 @@
 body {
   background-color: #e7e5d9;
 }
- .first-page {
-   background-image:url('https://ws4.sinaimg.cn/large/006tNc79gy1fhyig8c9pij31kw0w07wi.jpg');
-   background-repeat: no-repeat;
-   background-size: cover;
- }
+ // .first-page {
+ //   background-image:url('https://ws4.sinaimg.cn/large/006tNc79gy1fhyig8c9pij31kw0w07wi.jpg');
+ //   background-repeat: no-repeat;
+ //   background-size: cover;
+ // }
 
  .lead {
-  margin-top: 60%;
+  margin-top: 20%;
   margin-bottom: 100px;
   text-align: center;
-
 }
 
 .btn-block {
@@ -98,7 +97,7 @@ body {
    background-color: rgba(231, 229, 217, 0.92); //鼠标放置在链接上的背景颜色，这里设为透明
     color: #212121;
   }
-  
+
    .btn-danger {
        color: #fff;//字体颜色
        background-color: #EF6C00;//背景颜色
