--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,66 @@
-<div class="first-page">
-  <div class="container">
-    <div class="row">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<div class="container">
+  <div class="row">
+    <div class="jumbotron">
+      <h1>Hello, world!</h1>
       <!-- <h2>目前总共有<%= User.count %>名使用者</h2> -->
       <p class="lead"><a class="btn btn-block" href="/jobs">KEEP GO ON</a></p>
     </div>
   </div>
+<div class="row">
+
+<div class="panel-group" id="accordion">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+        工作渠道</a>
+      </h4>
+    </div>
+    <div id="collapse1" class="panel-collapse collapse in">
+      <div class="panel-body">
+        Ruby on Rails 的工作职缺在国内比较小众。
+        <br>主要的原因是因为野生的 Ruby on Rails 程序员成长的门槛比较高，平均野生的 Ruby on Rails 程序员，长成需要 2-3 年以上的时间。
+        不过由于 Ruby on Rails 搭建网站程序相当高效，使用 Rails 开发的效率是 PHP 或者是 JAVA 的十倍，
+        <br>所以 B 轮以下的创业公司，Ruby on Rails 程序员的招收需求以及薪资十分的高。
+        <br>一般来说：
+        <br>偏远城市的 Junior 程序员大概是 7K 起跳，北上广是 10K 起
+        <br>至于 1-2 年工作经历以上的程序员，大概是 13K-18
+        <br>3 年以上的 20K- 40K （需看个人技术）
+        <br>比起一般水平的程序员岗位工资高上不少。
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+        Collapsible Group 2</a>
+      </h4>
+    </div>
+    <div id="collapse2" class="panel-collapse collapse">
+      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat.</div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+        Collapsible Group 3</a>
+      </h4>
+    </div>
+    <div id="collapse3" class="panel-collapse collapse">
+      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat.</div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 </div>
