move the number of words in resume

--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -7,7 +7,6 @@
   <%= f.input :why, :label => "为什么想要应征这份工作　（自己对公司的研究与未来可以进行的贡献）"%>
   <%= f.input :prove, :label => "自己对这份职缺的竞争优势　（证明自己可以）"%>
   <%= f.input :action, :label => "联络资讯　（CALL TO ACTION）"%>
-  <%= f.input :attachment, :label => "附件"%>
-
+  <%= f.input :attachment, :label => "产品展示"%>
   <%= f.submit "送出" %>
 <% end %>
