--- a/app/views/resumes/_resume.html.erb
+++ b/app/views/resumes/_resume.html.erb
@@ -11,24 +11,33 @@
     </div>
     <div class="panel-body">
         <div class="trix-content">
-          <h4>1.一句话形容自己</h4>
+          <h4>一句话</h4>
           <hr>
           <%= resume.one_word   %>
-          <h4>2. 200 字自我介绍　</h4>
+          <h4>关于我　</h4>
           <hr>
           <%= resume.content  %>
-          <h4>3. 用 2-3 段介绍过去 2 年在做什么　（自己会什么技能）</h4>
+          <h4>我做过什么</h4>
           <hr>
           <%= resume.experience  %>
-          <h4>4. 为什么想要应征这份工作</h4>
+          <h4>为何应聘</h4>
           <hr>
           <%= resume.why %>
-          <h4>5. 自己对这份职缺的竞争优势</h4>
+          <h4>为何选我</h4>
           <hr>
           <%= resume.prove %>
-          <h4>6. 联络资讯　（CALL TO ACTION）</h4>
+          <h4>项目展示</h4>
+          <hr>
+          <% if resume.attachment.present? %>
+            <i class="fa fa-paperclip"> </i>
+            <%= link_to("Download Resume", resume.attachment_url) %>
+          <% else %>
+             No Attachment
+          <% end %>
+          <h4>联系方式</h4>
           <hr>
           <%= resume.action  %>
+
 
         </div>
 
@@ -36,12 +45,6 @@
         <%= link_to("编辑", edit_resume_path(resume)) %> |
         <%= link_to("删除", resume_path(resume), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
 
-        <% if resume.attachment.present? %>
-          <i class="fa fa-paperclip"> </i>
-          <%= link_to("Download Resume", resume.attachment_url) %>
-        <% else %>
-           No Attachment
-        <% end %>
     </div>
 
 </div>
