--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -2,7 +2,8 @@
 <div class="row">
 
 <div class="page-header">
-  <h1>我的简历 <small>Subtext for header</small></h1>
+  <h1>我的简历 <small>Resume</small></h1>
+  <a href="http://jasonzimdars.com/svn/">简历套路</a>
 </div>
 <div class="pull-right">
   <%= link_to("新建简历", new_resume_path, :style => "font-size: 20px;") %>
