--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -10,7 +10,6 @@
 
 .sweet {
   margin-bottom: 40px;
-  padding: 4%;
   position: relative;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -18,6 +17,6 @@
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
 }
 
-hr {
-  padding-bottom: 10px;
+.resume-content {
+  margin:4% 4% 10% 4%;
 }
