--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -5,7 +5,7 @@
   <h1>我的简历 <small>Resume</small></h1>
   <a href="http://jasonzimdars.com/svn/">简历套路</a>
   <div class="pull-right">
-    <%= link_to("新建简历", new_resume_path, :style => "font-size: 20px;") %>
+      <p><a class="btn btn-warning" href="/resumes/new">新建简历</a></p>
   </div>
 
 </div>
