--- a/app/views/resumes/edit.html.erb
+++ b/app/views/resumes/edit.html.erb
@@ -1,9 +1,10 @@
+<div class="container">
+  <div class="col-md-12">
+    <h1>编辑简历</h1>
 
-<div class="col-md-10 col-md-offset-1">
-<h1>编辑简历</h1>
+    <hr>
 
-<hr>
+    <%= render "form" %>
 
-<%= render "form" %>
-
+  </div>
 </div>
