--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,8 +1,10 @@
-<div class="col-md-10 col-md-offset-1">
-<h1>新建简历</h1>
+<div class="container">
+  <div class="col-md-12">
+    <h1>新建简历</h1>
 
-<hr>
+    <hr>
 
-<%= render "form" %>
+    <%= render "form" %>
 
+  </div>
 </div>
