--- a/app/views/resumes/_resume.html.erb
+++ b/app/views/resumes/_resume.html.erb
@@ -4,7 +4,7 @@
       <div class="resume-content">
         <div class="row">
           <h1>
-            你好，我是 xxx
+            你好，我是<%= resume.user.email %>
           </h1>
           <h3>
             <%= simple_format(resume.one_word) %></h3>
