--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -13,6 +13,9 @@
        </div>
     </div>
     <div class="col-md-9">
+      <div class="pull-right">
+        <%= link_to("Add a job", new_job_path, :class => "btn btn-default" ) %>
+      </div>
     <div class="dropdown clearfix pull-right">
       <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
       排序<span class="caret"></span>
