--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -6,7 +6,7 @@
 <%= f.input :description, :label => "内容" %>
 <%= f.input :wage_lower_bound, :label => "薪资下限" %>
 <%= f.input :wage_upper_bound, :label => "薪资上限" %>
-<%= f.input :source, :label => "来源" %>
+<%= f.input :source, :label => "来源（网址）" %>
 <%= f.input :place, :label => "城市" %>
 <%= f.input :scale, :label => "公司规模" %>
 <%= f.input :contact_email, :label => "联系方式" %>
