--- a/app/views/admin/jobs/edit.html.erb
+++ b/app/views/admin/jobs/edit.html.erb
@@ -1,16 +1,10 @@
-<h1> Edit a job </h1>
+<div class="container">
+  <div class="col-md-10">
+    <h1>编辑工作</h1>
 
-<%= simple_form_for [:admin, @job ] do |f| %>
+    <hr>
 
-<%= f.input :title, :label => "职位" %>
-<%= f.input :description, :label => "内容" %>
-<%= f.input :wage_lower_bound, :label => "薪资下限" %>
-<%= f.input :wage_upper_bound, :label => "薪资上限" %>
-<%= f.input :source, :label => "来源" %>
-<%= f.input :place, :label => "城市" %>
-<%= f.input :scale, :label => "公司规模" %>
-<%= f.input :contact_email, :label => "联系方式" %>
-<%= f.input :is_hidden, :label => "隐藏" %>
+    <%= render "form" %>
 
-  <%= f.submit "Submit" %>
-<% end %>
+  </div>
+</div>
