--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,3 +1,4 @@
+<div class="col-md-12">
 <div class="pull-right">
   <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default" ) %>
 </div>
@@ -43,3 +44,4 @@
   </tr>
   <% end %>
 </table>
+</div>
