--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -12,3 +12,26 @@
     font-size: 16px;
     font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
 }
+
+.wage_show {
+    background: #F3C02F;
+    color: #fff;
+    padding: 4px 8px;
+    border-radius: 9px;
+    font-size: 15px;
+}
+
+.skill_show {
+  border: 1.5px solid #ddd;
+  box-shadow: inset -2px -1px 0px 0px #ccc;
+  padding: 4px 8px;
+  color: grey;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+.fly > img {
+  width: 50px;
+  box-shadow: 1px 1px 3px 2px rgba(134, 130, 130, 0.54);
+  border-radius: 25px;
+}
