--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -33,12 +33,18 @@
       </div>
     </div>
     <div class="col-md-2 pull-right">
-      <a href="<%= @job.source %>"><%= @job.company %></a>
+      <div class="company">
+      <%= @job.company %>(图片+链接)
     </div>
-
+</div>
   </div>
+      <div class="content_job">
   <div class="container">
+    <div class="row">
 
-    <p>工作内容：<%= simple_format(@job.description) %></p>
+    <h3>工作内容：</h3>
+    <p><%= simple_format(@job.description) %></p>
+  </div>
+  </div>
   </div>
 </div>
