change the date to to_s frome treasure chest2 5-1

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -3,7 +3,7 @@
     <div class="jumbotron">
 <div class="container">
       <div class="col-md-6">
-                <p style="color:grey">发布于...</p>
+                <p style="color:grey">发布于<%= @job.created_at.to_s(:ymd) %></p>
         <h2>
           <%= @job.title %>
           <span class="wage_show">
