--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -18,5 +18,10 @@
 <%= f.input :description, :label => "内容（职位描述、团队介绍、工作地址）" %>
 <%= f.input :is_hidden, :label => "隐藏" %>
 
+<div class="form-group">
+  <%= f.label :status %>
+
+  <%= f.select :status, Job::STATUS.map{ |s| [t(s, :scope => "job.status"), s] }, {}, :class => "form-control" %>
+</div>
   <%= f.submit "Submit" %>
 <% end %>
