remove job_category

--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -9,7 +9,7 @@
 <%= f.input :company, :label => "公司名" %>
 <%= f.input :financing_stage, :label => "融资阶段" %>
 <%= f.input :industry, :label => "行业领域" %>
-<%= f.input :job_category, :label => "工作性质" %>
+<!-- <%= f.input :job_category, :label => "工作性质" %> -->
 <%= f.input :source, :label => "来源（网址）" %>
 <%= f.input :place, :label => "城市" %>
 <%= f.input :scale, :label => "公司规模" %>
