add ckeditor to job#show

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -25,7 +25,7 @@
 <%= f.input :scale, :label => "公司规模" %>
 <%= f.input :contact_email, :label => "联系方式" %>
 <hr>
-<%= f.input :description, :label => "内容（职位描述、团队介绍、工作地址）" %>
+<%= f.input :description, as: :ckeditor, :label => "内容（职位描述、团队介绍、工作地址）" %>
 <%= f.input :is_hidden, :label => "隐藏" %>
 
 
