--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="page-header">
-      <h1>职缺<small>Position</small></h1>
+      <h1><%= t("position") %><small>Position</small></h1>
     </div>
     <div class="col-md-3">
       <h3>招聘渠道<h3>
