--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -1,36 +1,32 @@
 <%= simple_form_for [:admin, @job ] do |f| %>
 
-<%= f.input :title, :label => "职位" %>
-<%= f.input :wage_lower_bound, :label => "薪资下限" %>
-<%= f.input :wage_upper_bound, :label => "薪资上限" %>
-<%= f.input :job_experience, :label => "工作经验" %>
-<%= f.input :education_background, :label => "学历要求" %>
-<div class="form-group">
-  <%= f.label :status%>
-  <% Job::STATUS.each do |status| %>
-     <label>
-       <%= f.radio_button :status, status %>
-       <%= t(status, :scope => "job.status") %>
-     </label>
-   <% end %>
-</div>
-<%= f.input :skill, :label => "技能要求" %>
-<%= f.input :company, :label => "公司名" %>
-<%= f.input :financing_stage, :label => "融资阶段" %>
-<%= f.input :industry, :label => "行业领域" %>
+<%= f.input :title  %>
+<%= f.input :wage_lower_bound %>
+<%= f.input :wage_upper_bound %>
+<%= f.input :job_experience %>
+<%= f.input :education_background %>
+<%= f.input :skill %>
+<%= f.input :company %>
+<%= f.input :financing_stage %>
+<%= f.input :industry %>
 <!-- <%= f.input :job_category, :label => "工作性质" %> -->
-<%= f.input :source, :label => "来源（网址）" %>
-<%= f.input :place, :label => "城市" %>
-<%= f.input :scale, :label => "公司规模" %>
-<%= f.input :contact_email, :label => "联系方式" %>
+<%= f.label :status %>
 
-<%= f.input :description, as: :ckeditor, :label => "内容（职位描述、团队介绍、工作地址）" %>
-
+<div class="btn-group">
+  <% Job::STATUS.each do |status| %>
+  <label class="btn btn-default">
+    <%= f.radio_button :status, status %>
+    <%= t(status, :scope => "job.status") %>
+  </label>
+  <% end %>
+</div>
+<p><%= f.input :source %></p>
+<%= f.input :place %>
+<%= f.input :scale %>
+<%= f.input :contact_email %>
 <hr>
-<%= f.input :is_hidden, :label => "隐藏" %>
+<%= f.input :description, as: :ckeditor %>
+<%= f.input :is_hidden %>
 
-<hr>
-
-
-  <%= f.submit "Submit" %>
+<%= f.submit "Submit" %>
 <% end %>
