--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,3 +1,5 @@
 <footer class="container" style="margin-top: 100px;">
     <p class="text-center">hohohohoho!~</p>
+    <%= link_to "中文版", :controller => controller_name, :action => action_name, :locale => "zh-CN" %>
+    <%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %>
 </footer>
