add single UI to city

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -25,6 +25,8 @@
 </div>
 <p><%= f.input :source %></p>
 <%= f.input :place %>
+
+<%= f.association :city %>
 <%= f.input :scale %>
 <%= f.input :contact_email %>
 <hr>
