--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -8,7 +8,7 @@
 </div>
   <div class="col-md-6">
     <h3><%= link_to(job.title, job_path(job)) %> <span style="color:green"> <%= job.wage_lower_bound %> - <%= job.wage_upper_bound %></span></h3>
-    <p><%= job.place %> | <%= job.job_experience %> | <%= job.education.try(:name) %></p>
+    <p><%= job.city.try(:name) %> | <%= job.job_experience %> | <%= job.education.try(:name) %></p>
     <p class="label label-default"><%= job.skill %></p>
     <p style="color:grey">发布于<%= job.created_at.to_s %></p>
   </div>
